redesigned scrollbar, fix errors

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -28,10 +28,25 @@
 }
 
 *::-webkit-scrollbar-track {
-    background: var(--card-bg); /* Цвет дорожки */
+    background: var(--light-bg-redesigned); /* Цвет дорожки */
 }
 
 *::-webkit-scrollbar-thumb {
+    background-color: var(--icon-redesigned); /* Цвет бегунка */
+    border-radius: 20px; /* Округление бегунка */
+    border: 1px solid var(--accent-redesigned); /* Оформление границ бегунка */
+}
+
+.app *::-webkit-scrollbar {
+    width: 12px; /* Ширина всего элемента навигации */
+    height: 8px;
+}
+
+.app *::-webkit-scrollbar-track {
+    background: var(--card-bg); /* Цвет дорожки */
+}
+
+.app *::-webkit-scrollbar-thumb {
     background-color: var(--inverted-bg-color); /* Цвет бегунка */
     border-radius: 20px; /* Округление бегунка */
     border: 2px solid var(--primary-color); /* Оформление границ бегунка */
